--- a/style.css
+++ b/style.css
@@ -32,8 +32,21 @@ h2 {
 }
 
 .gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   background-color: white;
   font-size: 10px;
+}
+
+
+.imagen {
+  display: flex;
+  align-self: flex-end;
+  margin: 20px 5px 0px 0px ;
+  margin-top: 20px;
+
 }
 
 
@@ -50,13 +63,14 @@ img:hover {
   transition: all 0.3s ease;
   box-shadow: 0px 0px 10px rgb(100, 100, 100);
   cursor: grab ;
+  
 }
 
 img:active {
   transform: scale(2);
   transition: all 0.4s ease;
-  box-shadow: 0px 0px 20px rgb(100, 100, 100);
-  
+  box-shadow: 0px 0px 20px rgb(100, 100, 100); 
+  filter: none; 
 }
 
 
