--- a/style.css
+++ b/style.css
@@ -16,20 +16,23 @@ body {
   align-items: center;
 }
 
-
-h2 {
-  font-family: 'Caveat', cursive;
-  background-color: rgb(44, 44, 44);
+.titleNav {
   width: 100%;
-  height: 80px;
-  color:white;
-  font-size: 45px;
-  letter-spacing: 1px;
-  font-weight: 500;
+  height: 100px;
+  background-color: rgb(44, 44, 44);
 
   display: flex;
   justify-content: center;
   align-items: center;
+  
+}
+
+h2 {
+  font-family: 'Caveat', cursive;
+  color:white;
+  font-size: 45px;
+  letter-spacing: 1px;
+  font-weight: 500;  
 }
 
 .gallery {
